@@ -5,6 +5,6 @@ AUX audacious-plugins-1.5.1-interix3.patch 2123 RMD160 2c341f0852f22a0b576eeb4ad
 DIST audacious-plugins-2.1.tgz 3610509 RMD160 fb73e37b5c05baf376dfbcf9744d96ae85de0d02 SHA1 735c773688e65ee57ce72005a72a53bb7cacc78b SHA256 fe7441e9ee6ab903fa71d21e6ee6b1b2d398567a6618d519cbeb5fa0a6e3a013
 DIST audacious-plugins-2.2.tgz 3135776 RMD160 3b57282efc1f69319c0b3d0e196023a0b00f8d8f SHA1 f70ef19d397a7d72c00ee9a5c18ae4242e6e412b SHA256 aee812b34aa057bfff9e38dda29f1261e8e8cbdde65cf5fe553ab6b6a9ae33c8
 EBUILD audacious-plugins-2.1-r1.ebuild 3446 RMD160 b82433e6a16ee54fc88c93ad3a820670a0fc6f74 SHA1 0bd10c4ead31b82ebdf7ab7db529701684ed8172 SHA256 e9e24ea316c6ec136afaf46753138a77d111de974bfc20ded6048fd0e2839afc
-EBUILD audacious-plugins-2.2-r2.ebuild 3514 RMD160 9042d9fcedfe05973dc722f227e63551928e3923 SHA1 04887cb00fd4c9448d0fa21a65f6370c3b14bbfa SHA256 0a9b0ce76149d879cba3068df706147ba71880b1a8bf93270d55e7bd2a737bd8
-MISC ChangeLog 32703 RMD160 1797d4e9ec2b9ca6446d7353c10cca8b79b5931a SHA1 c6b0973accf66805e7debe02a2bac856f7f9f2a8 SHA256 216f3dc40214ce1beb2cb744bebb1dcedf499639465029ade97cce7490094989
+EBUILD audacious-plugins-2.2-r2.ebuild 3551 RMD160 b4233a4e1f8dfd7409ced1543dce7f0007fa3dd0 SHA1 8638dfee29ae7cced5a041266ead599e3ba09433 SHA256 fc460798a4f8d39aa78119417b4ce677f8773a9fed44be5c3cca562566bdff14
+MISC ChangeLog 32892 RMD160 c82c34435229844bcc6bb034a6d0f9b5e7b185ef SHA1 eb4279640c44d0908f9e765a1fb231f43968eae0 SHA256 8bf12e90257fad1bf0d4799c1a437a96e6fdeb817694a3b672b8b98e91571148
 MISC metadata.xml 1057 RMD160 1ee9e66c9001739d82b7a885af5e6f6a1869aeb8 SHA1 d0c304d8e1e50547da4428e7bd61dee3a4838fff SHA256 3540d450793c958052d6918787d397e6db0be96fdfbeedf2df8d667ec99e7fa1
