@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/audacious-plugins-2.2-r2.ebuild,v 1.6 2009/12/23 20:03:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/audacious-plugins-2.2-r2.ebuild,v 1.7 2010/01/04 23:20:48 chainsaw Exp $
 
 inherit eutils flag-o-matic
 
@@ -30,6 +30,7 @@ RDEPEND="app-arch/unzip
 		>=dev-libs/libcdio-0.79-r1 )
 	cue? ( media-libs/libcue )
 	esd? ( >=media-sound/esound-0.2.38-r1 )
+	ffmpeg? ( media-video/ffmpeg )
 	flac? ( >=media-libs/libvorbis-1.0
 		>=media-libs/flac-1.2.1-r1 )
 	fluidsynth? ( media-sound/fluidsynth )
