@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-plugins
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.156 2009/12/23 20:03:21 jer Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.157 2010/01/04 23:20:48 chainsaw Exp $
+
+  04 Jan 2010; <chainsaw@gentoo.org> audacious-plugins-2.2-r2.ebuild:
+  Add missing dependency on media-video/ffmpeg for USE="ffmpeg" as suggested
+  by Daniel Nilsson in bug #299643.
 
   23 Dec 2009; Jeroen Roovers <jer@gentoo.org>
   audacious-plugins-2.2-r2.ebuild:
